[package]
name = "lorenz"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Elichai <elichai.turkel@gmail.com>"]
edition = "2018"

[dependencies]
ring = "0.14.6"
x25519-dalek = "0.5.2"
rand_os = "0.1.3"
lazy_static = "1.3.0"
structopt = "0.2"
rustc-hex = "2.0"
zeroize = "0.9.1"

[dev-dependencies]
tempfile = "3.0"
rand = "0.6.5"